# NNbarBoxCuts

./: CMakeLists.txt  Cosmic.NNbar_Analysis_Hist.root  NNbar_Analysis_Hist.Cosmic.root  Signal.NNbar_Analysis_Hist.root  TreeAccess.cpp  TreeAccess.h  kNN.cpp  kNN.h  main.cpp
Config/: channel_0.cfg  channel_1.cfg  channel_5.cfg  channel_9.cfg  makeCfg.sh
